# test_project

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: 2025_05_07_0953-805a554ef4f7_init.py
src/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  repository.py  routes.py  schemas.py  service.py  utils.py
